# rcif

./: CMakeLists.txt
cmake/: rcifConfig.cmake.in
schema/rcif/: cmd.jsonnet  runinfo.jsonnet
